# lumio

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  biome.jsonc  docker-compose.yml  justfile  nixpacks.toml  package.json  turbo.json
.github/: renovate.json
.github/workflows/: ci-rust.yaml  ci.yaml  pr-title.yaml
apps/api-gateway/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  nest-cli.json  package.json  tsconfig.json
apps/api-gateway/src/: app.module.ts  main.ts
apps/auth/: package.json
apps/auth-service/: .env.example  .gitignore  Dockerfile  package.json  tsconfig.json
apps/auth-service/prisma/: schema.prisma
apps/auth-service/src/: app.module.ts  main.ts  prisma.service.ts
apps/auth/prisma/: schema.prisma
apps/auth/src/: app.module.ts  main.ts
apps/evaluation-service/: Dockerfile  README.md  nest-cli.json  package.json  tsconfig.build.json  tsconfig.json
apps/evaluation-service/prisma/: schema.prisma
apps/evaluation-service/src/: app.module.ts  main.ts  prisma.service.ts
apps/files-service/: .env.example  Dockerfile  README.md  nest-cli.json  package.json
apps/files-service/prisma/: schema.prisma
apps/files-service/src/: app.module.ts  main.ts  prisma.service.ts  s3.service.ts
apps/frontend/: .env.template  Dockerfile  bunfig.toml  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  middleware.ts  not-found.tsx  page.tsx  providers.tsx
apps/frontend/components/: app-sidebar.tsx  documents-list.tsx  full-calendar.tsx  google-auth-btn.tsx  hover-prefetch-link.tsx  login-form.tsx  nav-user.tsx  register-form.tsx  report-editor.tsx  student-project-view.tsx  teachers-sidebar.tsx  toggle-theme.tsx  upload-modal.tsx
apps/frontend/hooks/: use-criteria.ts  use-mobile.ts  use-project-student.ts  (+2 more)
apps/notif-service/: .env.example  Dockerfile  nest-cli.json  package.json  tsconfig.json
apps/plagiarism-service/: .env.template  .gitignore  Cargo.toml  Dockerfile  package.json  plagiarism_results.json
apps/plagiarism-service/.github/workflows/: ci-rust.yaml
apps/plagiarism-service/src/: algorithm.rs  api.rs  comparison_orchestrator.rs  lib.rs  main.rs  project_processor.rs  s3.rs
apps/plagiarism-service/tests/: api_integration_tests.rs
apps/project/: README.md  package.json
apps/project-service/: .env.example  Dockerfile  README.md  nest-cli.json  package.json
apps/report-service/: Dockerfile  bunfig.toml  package.json  tsconfig.json
docs/: doc.md
monitoring/: docker-compose.yml  prometheus.yml
(+350 files in other folders)
