[package]
name = "plagiarism-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.10.2" }
schemars = { package = "apistos-schemars", version = "0.8.22" }
apistos = { version = "0.5.1", features = ["extras", "qs_query", "swagger-ui"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
rust-s3 = "0.35.1"


[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cfg_not_test = "allow"
get_unwrap = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
float_cmp_const = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
zero_sized_map_values = "warn"
unnested_or_patterns = "warn"
assigning_clones = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
doc_link_with_quotes = "warn"
empty_enum = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_not_returning_iterator = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
macro_use_imports = "warn"
manual_is_variant_and = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
no_effect_underscore_binding = "warn"
option_as_ref_cloned = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unwrap_used = "deny"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # Set to `false` for debug information
debug = false     # Set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust
